--- a/server/src/server-https/CMakeLists.txt
+++ b/server/src/server-https/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(TARGET server-https)
-file(GLOB_RECURSE FILES "*.cpp" "*.h" "*.ui")
+file(GLOB_RECURSE FILES "*.cpp" "*.h"  "*.hpp" "*.ui")
 add_library(${TARGET} ${FILES})
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
-target_link_libraries(${TARGET} PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets Sql PostgreSQL)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets Sql)
+target_link_libraries(${TARGET} PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Sql)
