create json parser class

--- a/server/src/server-https/CMakeLists.txt
+++ b/server/src/server-https/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(TARGET server-https)
 file(GLOB_RECURSE FILES "*.cpp" "*.h"  "*.hpp" "*.ui")
-add_library(${TARGET} ${FILES})
+add_library(${TARGET} ${FILES}
+    json-parser/json-parser.h json-parser/json-parser.cpp
+    json-parser/structures/json-db-user-data.h json-parser/structures/json-db-user-data.cpp)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets Sql PostgreSQL)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets Sql)
